[package]
name = "gpt-cli"
version = "0.0.16"
edition = "2021"
authors = ["Daniel Gustaw <gustaw.daniel@gmail.com>"]
license = "MIT"
description = "Run linux commands with natural language. Eg.: 'show my graphic card' instead 'lspci | grep VGA'"
readme = "README.md"
homepage = "https://github.com/gustawdaniel/gpt-cli"
repository = "https://github.com/gustawdaniel/gpt-cli"
keywords = ["cli", "openai", "gpt3", "gpt3-cli", "gpt3-turbo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
serde_json = "1.0.94"
rand = "0.8.5"
hex = "0.4.3"
colored = "2.0.0"
serde = { version = "1.0.155", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
inquire = { version = "0.6.0" }
terminal-clipboard = "0.3.1"
async-recursion = "1.0.2"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
grcov = "0.8.13"
httpmock="0.6.7"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gpt-cli", dest = "/usr/bin/gpt-cli", mode = "755" },
    { source = "gpt-cli.svg", dest = "/usr/share/icons/hicolor/", mode = "644" },
]