[package]
name = "gpt-cli"
version = "0.1.1"
edition = "2024"
authors = ["Daniel Gustaw <gustaw.daniel@gmail.com>"]
license = "MIT"
description = "Run linux commands with natural language. Eg.: 'show my graphic card' instead 'lspci | grep VGA'"
readme = "README.md"
homepage = "https://github.com/gustawdaniel/gpt-cli"
repository = "https://github.com/gustawdaniel/gpt-cli"
keywords = ["cli", "openai", "gpt-cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
serde_json = "1.0.140"
rand = "0.9.1"
hex = "0.4.3"
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["full"] }
inquire = { version = "0.7.5" }
terminal-clipboard = "0.4.1"
async-recursion = "1.1.1"
openssl = { version = "0.10.73", features = ["vendored"] }

[dev-dependencies]
grcov = "0.10.0"
httpmock="0.7.0"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/gpt-cli", dest = "/usr/bin/gpt-cli", mode = "755" },
    { source = "gpt-cli.svg", dest = "/usr/share/icons/hicolor/", mode = "644" },
]